Inputs: Use inset box-shadow for borders, add small input version
And remove styles for usage on colored background, other than nq-blue-bg

--- a/demo.html
+++ b/demo.html
@@ -190,6 +190,10 @@
                 margin-bottom: 0.75rem;
             }
 
+            .nq-input-s {
+                font-size: 2rem;
+            }
+
             .icons {
                 font-size: 5rem;
             }
@@ -500,39 +504,56 @@
                         </div>
                         <div class="nq-card-body">
                             <h2 class="nq-h2">Regular</h2>
-                            <input class="nq-input"><br>
+                            <input class="nq-input">
+                            <input class="nq-input-s"><br>
                             <br>
-                            <input class="nq-input" placeholder="I am a placeholder..."><br>
+                            <input class="nq-input" placeholder="I am a placeholder...">
+                            <input class="nq-input-s" placeholder="I am a small placeholder..."><br>
                             <br>
-                            <input class="nq-input" value="I have a value" placeholder="...and placeholder, too!"><br>
+                            <input class="nq-input" value="I have a value" placeholder="...and placeholder, too!">
+                            <input class="nq-input-s" value="I have a small value" placeholder="...and placeholder, too!"><br>
                             <br>
                             <h2 class="nq-h2">Without border (vanishing)</h2>
-                            <input class="nq-input vanishing" placeholder="I am a placeholder..."><br>
+                            <input class="nq-input vanishing" placeholder="I am a placeholder...">
+                            <input class="nq-input-s vanishing" placeholder="I am a small placeholder..."><br>
                             <br>
                             <input class="nq-input vanishing" value="I have a value" placeholder="...and placeholder, too!">
+                            <input class="nq-input-s vanishing" value="I have a small value" placeholder="...and placeholder, too!">
                         </div>
 
                         <div class="code">&lt;input class="<b>nq-input</b>">
 &lt;input class="<b>nq-input</b>" placeholder="I am a placeholder...">
 &lt;input class="<b>nq-input</b>" value="I have a value">
 
+&lt;input class="<b>nq-input-s</b>">
+&lt;input class="<b>nq-input-s</b>" placeholder="I am a small placeholder...">
+&lt;input class="<b>nq-input-s</b>" value="I have a small value">
+
 &lt;input class="<b>nq-input vanishing</b>" placeholder="I am a placeholder...">
 &lt;input class="<b>nq-input vanishing</b>" value="I have a value">
+
+&lt;input class="<b>nq-input-s vanishing</b>" placeholder="I am a small placeholder...">
+&lt;input class="<b>nq-input-s vanishing</b>" value="I have a small value">
                         </div>
 
                         <div class="nq-card-body">
                             <div class="nq-blue-bg rounded-padding">
                                 <h2 class="nq-h2">On dark background</h2>
-                                <input class="nq-input"><br>
+                                <input class="nq-input">
+                                <input class="nq-input-s"><br>
                                 <br>
-                                <input class="nq-input" placeholder="I am a placeholder..."><br>
+                                <input class="nq-input" placeholder="I am a placeholder...">
+                                <input class="nq-input-s" placeholder="I am a small placeholder..."><br>
                                 <br>
-                                <input class="nq-input" value="I have a value" placeholder="...and placeholder, too!"><br>
+                                <input class="nq-input" value="I have a value" placeholder="...and placeholder, too!">
+                                <input class="nq-input-s" value="I have a small value" placeholder="...and placeholder, too!"><br>
                                 <br>
                                 <h2 class="nq-h2">Without border (vanishing)</h2>
-                                <input class="nq-input vanishing" placeholder="I am a placeholder..."><br>
+                                <input class="nq-input vanishing" placeholder="I am a placeholder...">
+                                <input class="nq-input-s vanishing" placeholder="I am a small placeholder..."><br>
                                 <br>
                                 <input class="nq-input vanishing" value="I have a value" placeholder="...and placeholder, too!">
+                                <input class="nq-input-s vanishing" value="I have a small value" placeholder="...and placeholder, too!">
                             </div>
                         </div>
 
@@ -540,8 +561,15 @@
 &lt;input class="<b>nq-input</b>" placeholder="I am a placeholder...">
 &lt;input class="<b>nq-input</b>" value="I have a value">
 
+&lt;input class="<b>nq-input-s</b>">
+&lt;input class="<b>nq-input-s</b>" placeholder="I am a small placeholder...">
+&lt;input class="<b>nq-input-s</b>" value="I have a small value">
+
 &lt;input class="<b>nq-input vanishing</b>" placeholder="I am a placeholder...">
 &lt;input class="<b>nq-input vanishing</b>" value="I have a value">
+
+&lt;input class="<b>nq-input-s vanishing</b>" placeholder="I am a small placeholder...">
+&lt;input class="<b>nq-input-s vanishing</b>" value="I have a small value">
                         </div>
                     </div><!-- .nq-card -->
 
