Start implementing automatic dark mode
- Adds support for body, links, paragraphs, labels, buttons, inputs and cards

--- a/demo.html
+++ b/demo.html
@@ -267,6 +267,23 @@
                     </div>
                 </div>
 
+                <div class="nq-card" id="dark">
+                    <div class="nq-card-header">
+                        <h1 class="nq-h1">
+                            <a href="#dark">Dark mode</a>
+                        </h1>
+                        <span class="nq-label nq-notice info">New</span>
+                    </div>
+                    <div class="nq-card-body">
+                        <p class="nq-text">
+                            Dark mode was designed to make things easy on the eyes, not to simulate reading by candlelight.
+                        </p>
+                        <p class="nq-text">
+                            To see it in action, please activate dark appearance in your operating system settings.
+                        </p>
+                    </div>
+                </div>
+
                 <div class="nq-card" id="typography">
                     <div class="nq-card-header">
                         <h1 class="nq-h1"><a href="#typography">Typography</a></h1>
