Add alert-circle icon

--- a/demo.html
+++ b/demo.html
@@ -675,6 +675,8 @@
                         <div class="hint" aria-label="nq-scan-qr-code"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-scan-qr-code"/></svg></div>
                         <div class="hint" aria-label="nq-settings"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-settings"/></svg></div>
                         <div class="hint" aria-label="nq-alert-triangle"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-alert-triangle"/></svg></div>
+                        <br/>
+                        <div class="hint" aria-label="nq-alert-circle"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-alert-circle"/></svg></div>
                         <div class="hint" aria-label="nq-gear"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-gear"/></svg></div>
                         <div class="hint" aria-label="nq-menu-dots"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-menu-dots"/></svg></div>
                         <div class="hint" aria-label="nq-questionmark"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-questionmark"/></svg></div>
@@ -721,6 +723,8 @@
                         <div class="hint" aria-label="nq-scan-qr-code"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-scan-qr-code"/></svg></div>
                         <div class="hint" aria-label="nq-settings"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-settings"/></svg></div>
                         <div class="hint" aria-label="nq-alert-triangle"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-alert-triangle"/></svg></div>
+                        <br/>
+                        <div class="hint" aria-label="nq-alert-circle"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-alert-circle"/></svg></div>
                         <div class="hint" aria-label="nq-gear"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-gear"/></svg></div>
                         <div class="hint" aria-label="nq-menu-dots"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-menu-dots"/></svg></div>
                         <div class="hint" aria-label="nq-questionmark"><svg class="nq-icon"><use xlink:href="./nimiq-style.icons.svg#nq-questionmark"/></svg></div>
